<resources>
    <string name="app_name">Glup</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_home">Catalogo</string>
    <string name="title_activity_principal">Principal</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="tienda">
        <b><u>Tienda</u></b>
    </string><string name="marca">
        <b>Marca :</b>
    </string>
    <string name="tipo">
        <b>Tipo :</b>
    </string>
    <string name="modelo">
        <b>Modelo :</b>
       </string>
    <string name="estilo">
        <b>Estilo :</b>
       </string>
    <string name="precio">
        <b>Precio :</b>
    </string>
    <string name="content_confirmation_pass">Ingresa tu contraseña para guardar el cambio</string>
    <string name="descripcion_prenda">Fiel a la firma de estilo urbano de la diseñadora Victoria Beckham, este top de mezclilla de color azul se hace a mano  con los hombros estrechos y cintura ajustada.</string>

    <string-array name="tiendas">
        <item>Cargando</item>
        <item>Tiendas</item>
    </string-array>
    <string name="item_string">Item %1$d</string>
    <string name="fastscroller_track">FastScroller track</string>
    <string name="fastscroller_handle">FastScroller handle</string>
    <string name="content_confirmation_reserva">Porfavor ingrese el codigo enviado a su correo</string>
    <string name="text_time_reserva">Tus prendas se han reservado por 12 horas, recogelas con el siguiente número</string>
    <string name="text_solicita_ticket">Para usarlo en lo que mas te guste, solicitalos luego de tu compra</string>
    <string name="text_cantidad_puntos">La cantidad de puntos, varia segun la prenda que compres no te olvides de solicitar que se atendio vía Glup</string>
    <string name="validacion_contrasena_registro">Tu contraseña debe contener una letra mayuscula,minuscula y un numero y debe estar entre 4 y 12 caracteres</string>

    <string name="validacion_pass_registro">Debe contener una mayúscula, un número y de 6 a 12 carácteres </string>
    <string name="help_change_new_pass">Tu nueva contraseña debe contener una mayúscula, un número y de 6 a 12 carácteres </string>
    <string name="elija_hombre_mujer">Elija sexo Hombre o Mujer</string>
    <string name="btn_recovery_pass">¿Olvidastes tu contraseña?</string>
    <string name="btn_recovery_pass_pressed"><u>¿Olvidastes tu contraseña?</u></string>

    <string name="text_help_toma_foto">Encaja la prenda en el marco</string>



</resources>
