<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:background="@drawable/dialog_selector"
    android:padding="@dimen/dialog_body"
    android:layout_height="match_parent">
    <TextView
        android:layout_margin="10dp"
        android:textSize="22sp"
        android:layout_gravity="center_horizontal"
        android:id="@+id/title_ticket"
        android:text="RESERVA EXITOSA"
        android:textColor="@color/celeste_glup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_margin="6dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_margin="6dp"
            android:orientation="vertical"
            android:layout_weight="6"
            android:layout_width="0dp"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/text_time_reserva"
                android:textColor="@color/negro"
                android:textSize="14sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/code"
                android:layout_margin="10dp"
                android:text="#1233565"
                android:textStyle="bold"
                android:textColor="@color/celeste_glup"
                android:textSize="24sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:visibility="gone"
            android:layout_margin="6dp"
            android:orientation="vertical"
            android:layout_weight="4"
            android:layout_width="0dp"
            android:layout_height="wrap_content">
            <TextView
                android:layout_gravity="center"
                android:text="Puedes ganar"
                android:textColor="@color/negro"
                android:textSize="14sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_gravity="center"
                android:text="100"
                android:textStyle="bold"
                android:textColor="@color/celeste_glup"
                android:textSize="22sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_gravity="center"
                android:text="Puntos"
                android:textColor="@color/celeste_glup"
                android:textSize="14sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_marginLeft="6dp"
                android:layout_gravity="center"
                android:text="@string/text_solicita_ticket"
                android:textColor="@color/negro"
                android:textSize="8sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:visibility="gone"
        android:textSize="8sp"
        android:text="@string/text_cantidad_puntos"
        android:layout_margin="10dp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>